# Flet-Analytics-CRM

./: .env  .env.example  .gitignore  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  client.py  ui.py
backend/: __init__.py  auth.py  cli.py  db.py  excel_reader.py  main.py  models.py  presence.py  sample_data.py  schemas.py  settings.py
data/network_share/clients/acme_corporation/: customers.xlsx  sales_2026.xlsx
data/network_share/clients/beta_limited/: sales_q1.xlsx
data/network_share/templates/: customer_template.xlsx  sales_template.xlsx
scripts/: generate_sample_data.py  start_api.sh
